--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -85,7 +85,10 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 #sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = sqlite:///../../test.db
+# Use DATABASE_URL from environment when available. If DATABASE_URL is not
+# set, Alembic will fall back to this placeholder. Do not commit real
+# credentials into source control — set them in `backend/.env` or your CI.
+sqlalchemy.url = ${DATABASE_URL}
 
 
 [post_write_hooks]
