added a tool to measure performance and added the login process

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,31 @@
+# Copy this file to `.env` at the repository root and fill in real secrets. DO NOT commit `.env`.
+
+# Default admin created on startup if missing
+SINGLE_ADMIN_USERNAME=admin
+SINGLE_ADMIN_PASSWORD=changeme
+
+# Application secret used to sign access tokens (override in prod)
+SECRET_KEY=dev-secret-change-me
+ACCESS_TOKEN_EXPIRE_MINUTES=60 # how many minutes the access token is valid
+
+# Database (example):
+# For local sqlite (development):
+DATABASE_URL=sqlite:///./backend/test.db
+
+# For Postgres (example):
+# DATABASE_URL=postgresql+psycopg2://<user>:<password>@localhost:5432/<dbname>
+
+# Redis (optional) used by docker-compose if needed:
+# REDIS_URL=redis://redis:6379/0
+
+# Logging
+LOG_FILE=./backend/logs/app.log
 # Copy this file to `.env` and fill in secure values. Do NOT commit `.env`.
 
 # Postgres (used by docker-compose)
-POSTGRES_USER=stopphish
+POSTGRES_USER=db_user
 POSTGRES_PASSWORD=change_this_to_a_strong_password
-POSTGRES_DB=stopphishing
+POSTGRES_DB=db_name
 POSTGRES_PORT=5432
 
 # Redis (if you override)
@@ -11,3 +33,7 @@ REDIS_URL=redis://redis:6379/0
 
 # Backend overrides (optional)
 # DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}
+
+# Comma-separated list of frontend origins allowed to talk to the backend during development.
+# Examples: FRONTEND_ORIGINS="http://localhost:5173,http://127.0.0.1:5173" or FRONTEND_ORIGINS="*"
+FRONTEND_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
