--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,11 @@ WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
+# Install runtime utilities (curl for healthchecks) and tini as PID 1
+RUN apt-get update \
+	&& apt-get install -y --no-install-recommends curl tini \
+	&& rm -rf /var/lib/apt/lists/*
+
 # Install build deps (if needed) then dependencies
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
@@ -16,4 +21,5 @@ COPY . /app
 EXPOSE 8000
 
 # Run the app with uvicorn
+ENTRYPOINT ["tini", "--"]
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
