--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,6 +16,15 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    # Proxy auth endpoints (login/register/profile) to backend
+    location /auth {
+        proxy_pass http://backend:8000/auth;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /dashboard {
         proxy_pass http://backend:8000/dashboard;
         proxy_set_header Host $host;
