fixed some bugs added a search function to the /urls and updated the UI/UX

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@
 SINGLE_ADMIN_USERNAME=admin
 SINGLE_ADMIN_PASSWORD=changeme
 
+SINGLE_NONADMIN_USERNAME=user
+SINGLE_NONADMIN_PASSWORD=changeme
+
 # Application secret used to sign access tokens (override in prod)
 SECRET_KEY=dev-secret-change-me
 ACCESS_TOKEN_EXPIRE_MINUTES=60 # how many minutes the access token is valid
