--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,31 +10,83 @@ server {
     }
 
     # Proxy API requests to backend service (docker-compose service name `backend`)
+    # Note: /urls is a frontend route; serve index.html on browser navigations.
     location /urls {
-        proxy_pass http://backend:8000/urls;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        try_files $uri $uri/ /index.html;
     }
 
-    # Proxy auth endpoints (login/register/profile) to backend
+    # Proxy auth endpoints (login/register/profile) to backend.
+    # Avoid using `if { try_files }` as it's not valid in this context
+    # and can cause nginx to fail to start. If the SPA needs to serve
+    # /auth on browser navigations, keep client-side routing handling.
     location /auth {
         proxy_pass http://backend:8000/auth;
-        proxy_set_header Host $host;
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /dashboard {
-        proxy_pass http://backend:8000/dashboard;
-        proxy_set_header Host $host;
+    # Explicitly proxy dashboard API endpoints to backend while
+    # keeping the SPA `location /dashboard` fallback for browser navigations.
+    # More specific locations must come before the generic /dashboard block.
+    location = /dashboard/metrics {
+        proxy_pass http://backend:8000$request_uri;
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location = /dashboard/risk-distribution {
+        proxy_pass http://backend:8000$request_uri;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location = /dashboard/status-distribution {
+        proxy_pass http://backend:8000$request_uri;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location ^~ /dashboard/activity/ {
+        proxy_pass http://backend:8000$request_uri;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location ^~ /dashboard/domains {
+        proxy_pass http://backend:8000$request_uri;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location ^~ /dashboard/urls {
+        proxy_pass http://backend:8000$request_uri;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Dashboard is a frontend route; serve index.html for browser navigations.
+    location /dashboard {
+        try_files $uri $uri/ /index.html;
     }
 
     # optional: proxy other API paths if present
     location /api/ {
         proxy_pass http://backend:8000/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
